fix <figure> img displays on smaller screens

--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -62,7 +62,8 @@ main#site-main
     margin: 60px 0
 
   .project-thumbnail
-    margin-bottom: 10px
+    margin: 0 auto 10px auto
+    max-width: 100%
     figcaption 
       width: 100%
       font-size: 12px
@@ -73,6 +74,7 @@ main#site-main
       display: block
       border-radius: 8px
       box-shadow: 0 0 10px rgba(0,0,0,0.15)
+      margin: 0 auto
     &.align-right
       +tablet
         max-width: 50%
@@ -88,6 +90,21 @@ main#site-main
       margin: 0 auto 10px auto
       img, video
         margin: 0 auto
+    &.logo-thumbnail
+      height: 200px
+      width: 200px
+      border: 1px solid $grey-lighter
+      padding: 5px
+      border-radius: 4px
+      box-shadow: 0 0 4px rgba(0,0,0,0.15)
+      +tablet
+        height: 80px
+        width: 80px
+      svg
+        width: 100%
+        height: 100%
+    &.my-watchlist-logo-thumbnail svg
+      fill: $my-watchlist-purple
 
   .project-links
     padding: 10px 0
